--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/ARCOTEC-SITE/pedroYan92.github.io/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="header">
       <div class="block__logo">
         <a href="" class="logo">
           <img
-            src="/ARCOTEC-SITE/pedroYan92.github.io/images/arcotec-logo.png"
+            src="/images/arcotec-logo.png"
             alt=""
             class="header__logo"
           />
@@ -25,7 +25,7 @@
         <div class="block__phone">
           <img
             class="header__icon__phone"
-            src="/ARCOTEC-SITE/pedroYan92.github.io/images/icon-phone-arcotec.png"
+            src="/images/icon-phone-arcotec.png"
             alt=""
           />
           <p class="header__phone">(11)2256-1375</p>
@@ -53,7 +53,7 @@
       </div>
       <div class="hero__block__img">
         <img
-          src="/ARCOTEC-SITE/pedroYan92.github.io/images/hero-arcotec.png"
+          src="/images/hero-arcotec.png"
           alt=""
           class="hero__img"
         />
@@ -62,7 +62,7 @@
     <section class="services__section" id="services__section">
       <article class="services__card">
         <img
-          src="/ARCOTEC-SITE/pedroYan92.github.io/images/icon-instalacao-arcotec.png"
+          src="/images/icon-instalacao-arcotec.png"
           alt=""
           class="card__img"
         />
@@ -79,7 +79,7 @@
       </article>
       <article class="services__card">
         <img
-          src="/ARCOTEC-SITE/pedroYan92.github.io/images/icon-manutencao-arcotec.png"
+          src="/images/icon-manutencao-arcotec.png"
           alt=""
           class="card__img"
         />
@@ -92,7 +92,7 @@
       </article>
       <article class="services__card">
         <img
-          src="/ARCOTEC-SITE/pedroYan92.github.io/images/icon-consultoria-e-orcamento-arcotec.png"
+          src="/images/icon-consultoria-e-orcamento-arcotec.png"
           alt=""
           class="card__img"
         />
@@ -113,14 +113,14 @@
           GRANDE SÃO PAULO
         </h2>
         <img
-          src="/ARCOTEC-SITE/pedroYan92.github.io/images/atendimento-arcotec.png"
+          src="/images/atendimento-arcotec.png"
           alt=""
           class="range__img"
         />
       </div>
       <div class="range__block__img">
         <img
-          src="/ARCOTEC-SITE/pedroYan92.github.io/images/atendimento-mapasp-arcotec.png"
+          src="/images/atendimento-mapasp-arcotec.png"
           alt=""
           class="range__img__map"
         />
@@ -129,7 +129,7 @@
     <section class="about__section" id="about__section">
       <div class="about__block__img">
         <img
-          src="/ARCOTEC-SITE/pedroYan92.github.io/images/sobre-arcotec.png"
+          src="/images/sobre-arcotec.png"
           alt=""
           class="about__img"
         />
@@ -160,7 +160,7 @@
           <a href="#" class="contact__whatsapp"
             ><img
               class="contact__img"
-              src="/ARCOTEC-SITE/pedroYan92.github.io/images/whatsapp-icon-arcotec.png"
+              src="/images/whatsapp-icon-arcotec.png"
               alt=""
             />
             <p>(11)99693-3813</p></a
@@ -198,6 +198,6 @@
         </p>
       </div>
     </footer>
-    <script src="/ARCOTEC-SITE/pedroYan92.github.io/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
