correction in mobile viewport

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="wrapper">
     <header class="header">
       <div class="block__logo">
         <a href="" class="logo">
           <img
-            src="/images/arcotec-logo.png"
+            src="images/arcotec-logo.png"
             alt=""
             class="header__logo"
           />
@@ -25,7 +25,7 @@
         <div class="block__phone">
           <img
             class="header__icon__phone"
-            src="/images/icon-phone-arcotec.png"
+            src="images/icon-phone-arcotec.png"
             alt=""
           />
           <p class="header__phone">(11)2256-1375</p>
@@ -35,15 +35,18 @@
         <i class="fas fa-bars"></i>
       </button>
       <nav class="menu__nav" id="menu__nav">
-        <a href="#services__section" class="menu__button">SERVIÇOS</a>
-        <a href="#about__section" class="menu__button">SOBRE</a>
-        <a href="#contact__section" class="menu__button">CONTATO</a>
+        <a href="#services__section" class="menu__button" id="Services">SERVIÇOS</a>
+        <a href="#about__section" class="menu__button"id="About" >SOBRE</a>
+        <a href="#contact__section" class="menu__button"id="Contact">CONTATO</a>
       </nav>
     </header>
     <main class="hero__section">
       <div class="hero__block__text">
         <h1 class="hero__primary__text">
-          RESIDENCIAL <span class="diff__e">&</span>
+          RESIDENCIAL 
+          <br> 
+          <span class="diff__e">&</span>
+          <br>
           <span class="diff__com">COMERCIAL</span>
         </h1>
         <h2 class="hero__secundary__text">
@@ -53,7 +56,7 @@
       </div>
       <div class="hero__block__img">
         <img
-          src="/images/hero-arcotec.png"
+          src="images/hero-arcotec.png"
           alt=""
           class="hero__img"
         />
@@ -62,7 +65,7 @@
     <section class="services__section" id="services__section">
       <article class="services__card">
         <img
-          src="/images/icon-instalacao-arcotec.png"
+          src="images/icon-instalacao-arcotec.png"
           alt=""
           class="card__img"
         />
@@ -79,7 +82,7 @@
       </article>
       <article class="services__card">
         <img
-          src="/images/icon-manutencao-arcotec.png"
+          src="images/icon-manutencao-arcotec.png"
           alt=""
           class="card__img"
         />
@@ -92,7 +95,7 @@
       </article>
       <article class="services__card">
         <img
-          src="/images/icon-consultoria-e-orcamento-arcotec.png"
+          src="images/icon-consultoria-e-orcamento-arcotec.png"
           alt=""
           class="card__img"
         />
@@ -109,18 +112,18 @@
     <section class="range__section">
       <div class="range__block__text">
         <h2 class="range__primary__text">
-          Atendemos em toda<br />
+          Atendemos em toda CAPITAL e<br />
           GRANDE SÃO PAULO
         </h2>
         <img
-          src="/images/atendimento-arcotec.png"
+          src="images/atendimento-arcotec.png"
           alt=""
           class="range__img"
         />
       </div>
       <div class="range__block__img">
         <img
-          src="/images/atendimento-mapasp-arcotec.png"
+          src="images/atendimento-mapasp-arcotec.png"
           alt=""
           class="range__img__map"
         />
@@ -129,7 +132,7 @@
     <section class="about__section" id="about__section">
       <div class="about__block__img">
         <img
-          src="/images/sobre-arcotec.png"
+          src="images/sobre-arcotec.png"
           alt=""
           class="about__img"
         />
@@ -142,8 +145,8 @@
         </p>  
         <br>
         <p class="about__content">Sempre com muita dedicação e atenção as necessidades individuais de nossos clientes e parceiros,
-          nos matemos firmes e leais aqueles que trabalham conosco, buscando sempre a humildade e evolução mesmo após 3 décadas
-          no mercado, afirmamos que ainda temos muito a contribuir para o bem estar e comodidade da sociedade, dos nossos clientes e parceiros. 
+          nos mantemos firmes e leais a aqueles que trabalham conosco, buscando sempre a humildade e evolução mesmo após 3 décadas
+          no mercado. Afirmamos que ainda temos muito a contribuir para o bem estar e comodidade da sociedade, dos nossos clientes e parceiros. 
         </p>
        
       </div>
@@ -157,10 +160,10 @@
 
         <div class="contact__whats__block">
           <p>Carlos:</p>
-          <a href="#" class="contact__whatsapp"
+          <a href="https://api.whatsapp.com/send?phone=5511996933813&text=Ol%C3%A1,%20Posso%20ajudar?" class="contact__whatsapp"
             ><img
               class="contact__img"
-              src="/images/whatsapp-icon-arcotec.png"
+              src="images/whatsapp-icon-arcotec.png"
               alt=""
             />
             <p>(11)99693-3813</p></a
@@ -194,7 +197,7 @@
       </div>
       <div class="footer__block__copyright">
         <p class="footer__copyright-content">
-          ©copyright 2020 | CREATED BY pedroYan
+          ©copyright 2020 | CREATED BY <a class="linkDeveloper" href="#">PedroYan</a>
         </p>
       </div>
     </footer>
