netfly-test form and deploy + correction in viewport mobile

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=-1.0" />
     <title>Arcotec Ar-condicionado</title>
     <link
       rel="stylesheet"
@@ -168,10 +168,11 @@
             />
             <p>(11)99693-3813</p></a
           >
+          <p>Email: carlos.arcotec@gmail.com</p>
         </div>
       </div>
       <div class="contact__block__form">
-        <form action="" class="contact__form">
+        <form action="POST" name="contact-client" class="contact__form" data-netlify="true" >
           <label for="" class="fullName">NOME COMPLETO</label>
           <input type="text" class="contact__input-fullName" />
           <label for="" class="email">EMAIL</label>
@@ -181,6 +182,9 @@
           <label for="" class="form__textArea">DEIXE UMA MENSAGEM</label>
           <textarea name="" class="form__input-textArea" cols="30" rows="10">
           </textarea>
+          <div class="field">
+            <div data-netlify-recaptcha="true"></div>
+          </div>
           <button type="submit" class="form__btn">Enviar</button>
         </form>
       </div>
